--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     "url": "https://github.com/digitaltk"
   },
   "dependencies": {
-    "@popperjs/core": "^2.1.1",
+    "@popperjs/core": "^2.4.4",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "gh-pages": "^2.2.0",
-    "jquery": "^3.5.0",
+    "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-photo-gallery": "^8.0.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "react-typist": "^2.0.5",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.6"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "CI": "react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "custom-deploy": "node pages.js"
