--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "developer-portfolio",
   "description": "A personal static website/portfolio template hosted with Netlify, built to showcase my recent projects.",
-  "homepage": "http://tatendam.com",
+  "homepage": "http://digitaltk.github.io/web/",
   "version": "0.1.0",
   "private": true,
   "author": {
