--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "developer-portfolio",
   "description": "A personal static website/portfolio template hosted with Netlify, built to showcase my recent projects.",
-  "homepage": "http://digitaltk.github.io/web/",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "author": {
     "name": "Tatenda Makandigona",
     "email": "tindxmathew@hotmail.com",
